quick bug fix with header not showing

--- a/attendance.css
+++ b/attendance.css
@@ -98,9 +98,11 @@ background:none!important;
      border:none; 
      padding-left: 15px;
      cursor: pointer;
-    font-size: 15px;
+    font-size: 0px;
 }
-
+.groupButton.active {
+      font-size: 15px;
+    }
 .groupButton:hover {
     color: grey; 
 }
@@ -111,7 +113,7 @@ background:none!important;
       color: black;
       padding: 5px;
       opacity: 95%;
-      min-height: 53px;
+      max-height: 53px;
       position: fixed;
       top: 55px;
       right: -140px;
@@ -123,9 +125,6 @@ background:none!important;
 .groupsGUI:hover {
         max-height: 100%;
       }
-.groupButton.active {
-      font-size: 15px;
-    }
 
 .mainpage .groupsGUI {
 position: fixed;
